cc_binary(
    name = "client_hook",
    srcs = ["client_hook.cpp", "custom_hook.cpp", "custom_hook.h"],
    copts = ["-Wall", "-Wextra", "-O2"],
    linkopts = ["-lssl", "-lcrypto"],
)

cc_binary(
    name = "client_engine",
    srcs = ["client_engine.cpp", "custom_hook.cpp", "custom_hook.h", "custom_engine.cpp", "custom_engine.h"],
    copts = ["-Wall", "-Wextra", "-O2"],
    linkopts = ["-lssl", "-lcrypto"],
)
